--- a/docs/release_notes/5-1-2.md
+++ b/docs/release_notes/5-1-2.md
@@ -38,11 +38,11 @@ A VPC HA router is now supported at the PoC level. By default, this feature is d
 
 To activate a VPC HA router from the CLI:
 
-$ consul kv put vpc/router_ha true
+    $ consul kv put vpc/router_ha true
 
 To deactivate a VPC HA router from the CLI:
 
-$ consul kv put vpc/router_ha false
+    $ consul kv put vpc/router_ha false
 
 ### System Management
 
@@ -76,46 +76,15 @@ _**New APIs**_
 
 This release adds support for the following AWS API actions:
 
-**ELB  
-**
+**ELB**
 
-Name
-
-Required Parameters
-
-Optional Parameters
-
-[SetIpAddressType](https://docs.aws.amazon.com/elasticloadbalancing/latest/APIReference/API_SetIpAddressType.html)
-
-IpAddressType
+<table class="wrapped confluenceTable"><colgroup><col><col><col></colgroup><tbody><tr><th class="confluenceTh">Name</th><th class="confluenceTh">Required Parameters</th><th class="confluenceTh">Optional Parameters</th></tr><tr><td class="confluenceTd"><a class="external-link" href="https://docs.aws.amazon.com/elasticloadbalancing/latest/APIReference/API_SetIpAddressType.html" rel="nofollow">SetIpAddressType</a></td><td class="confluenceTd">IpAddressType</td><td class="confluenceTd"></td></tr></tbody></table>
 
 _**Changed APIs**_
 
 **ELB**
 
-Name
-
-What changed?
-
-CreateTargetGroup
-
-Added support for the following optional parameters:
-
--   HealthCheckPort
--   HealthCheckProtocol
-
-ModifyTargetGroup
-
-Added support for the following optional parameters:
-
--   HealthCheckPort
--   HealthCheckIntervalSeconds
--   HealthCheckPath
--   HealthCheckProtocol
--   HealthCheckTimeoutSeconds
--   HealthyThresholdCount
--   Matcher
--   UnhealthyThresholdCount
+<table class="wrapped confluenceTable"><colgroup><col><col></colgroup><tbody><tr><th class="confluenceTh">Name</th><th class="confluenceTh">What changed?</th></tr><tr><td class="confluenceTd">CreateTargetGroup</td><td class="confluenceTd">Added support for the following optional parameters:<p></p><ul><li>HealthCheckPort</li><li>HealthCheckProtocol</li></ul></td></tr><tr><td class="confluenceTd">ModifyTargetGroup</td><td class="confluenceTd">Added support for the following optional parameters:<p></p><ul><li>HealthCheckPort</li><li>HealthCheckIntervalSeconds</li><li>HealthCheckPath</li><li>HealthCheckProtocol</li><li>HealthCheckTimeoutSeconds</li><li>HealthyThresholdCount</li><li>Matcher</li><li>UnhealthyThresholdCount</li></ul></td></tr></tbody></table>
 
 ## Known Issues and Limitations
 
@@ -186,233 +155,29 @@ Use these images to  [install services when Symphony is installed in a dark site
 
 **Database Image Information (dbs-manager)**
 
-Engine Version
-
-Revision
-
-image-file
-
-Application Version
-
-Signature and MD5SUM (for Dark Site)
-
-Mysql-5.5
-
-009
-
-dbs-mysql-5.5-20181002-4220bac.qcow2
-
-Mysql 5.5.61
-
-{'version': 'v1', 'name': 'dbs-mysql-5.5-20181002-4220bac.qcow2'}
-
-MD5SUM: 740b99cb09a71ac0f55508c8380b758f
-
-Mysql-5.6
-
-009
-
-dbs-mysql-5.6-20181002-4220bac.qcow2
-
-Mysql 5.6.41
-
-{'version': 'v1', 'name': 'dbs-mysql-5.6-20181002-4220bac.qcow2'}
-
-MD5SUM: 01a6536213bb9650f5cdce198302410c
-
-Mysql-5.7
-
-009
-
-dbs-mysql-5.7-20181002-4220bac.qcow2
-
-Mysql 5.7.23
-
-{'version': 'v1', 'name': 'dbs-mysql-5.7-20181002-4220bac.qcow2'}
-
-MD5SUM: fd17989f93efab518dc18e2af81c7920
-
-Postgresql-9.6
-
-006
-
-dbs-postgresql-9.6-20181003-4220bac.qcow2
-
-PostgreSQL 9.6.10
-
-{'version': 'v1', 'name': 'dbs-postgresql-9.6-20181003-4220bac.qcow2'}
-
-MD5SUM: 333a113a85ebc47d0eb5e5331ad85905
-
-Postgresql-10
-
-006
-
-dbs-postgresql-10-20181003-4220bac.qcow2
-
-PostgreSQL 10.5-1
-
-{'version': 'v1', 'name': 'dbs-postgresql-10-20181003-4220bac.qcow2'}
-
-MD5SUM: ae9ad9930315a67c000ebcce2c22508c
-
-MariaDB-10.1
-
-009
-
-dbs-mariadb-10.1-20181002-4220bac.qcow2
-
-MariaDB 10.1.32
-
-{'version': 'v1', 'name': 'dbs-mariadb-10.1-20181002-4220bac.qcow2'}
-
-MD5SUM: 9130e8745efca9f974f86ed59c9d265f
+<table class="wrapped confluenceTable"><colgroup><col style="width: 127.0px;"><col style="width: 83.0px;"><col style="width: 309.0px;"><col style="width: 156.0px;"><col style="width: 463.0px;"></colgroup><tbody><tr><th class="confluenceTh">Engine Version</th><th class="confluenceTh" colspan="1">Revision</th><th class="confluenceTh">image-file</th><th class="confluenceTh" colspan="1">Application Version</th><th class="confluenceTh">Signature and MD5SUM (for Dark Site)</th></tr><tr><td class="confluenceTd" colspan="1">Mysql-5.5</td><td class="confluenceTd" colspan="1">009</td><td class="confluenceTd" colspan="1">dbs-mysql-5.5-20181002-4220bac.qcow2</td><td class="confluenceTd" colspan="1">Mysql 5.5.61</td><td class="confluenceTd" colspan="1"><p>{'version': 'v1', 'name': 'dbs-mysql-5.5-20181002-4220bac.qcow2'}</p><p>MD5SUM: 740b99cb09a71ac0f55508c8380b758f</p></td></tr><tr><td class="confluenceTd" colspan="1">Mysql-5.6</td><td class="confluenceTd" colspan="1">009</td><td class="confluenceTd" colspan="1">dbs-mysql-5.6-20181002-4220bac.qcow2</td><td class="confluenceTd" colspan="1">Mysql 5.6.41</td><td class="confluenceTd" colspan="1"><p>{'version': 'v1', 'name': 'dbs-mysql-5.6-20181002-4220bac.qcow2'}</p><p>MD5SUM: 01a6536213bb9650f5cdce198302410c</p></td></tr><tr><td class="confluenceTd" colspan="1">Mysql-5.7</td><td class="confluenceTd" colspan="1">009</td><td class="confluenceTd" colspan="1">dbs-mysql-5.7-20181002-4220bac.qcow2</td><td class="confluenceTd" colspan="1">Mysql 5.7.23</td><td class="confluenceTd" colspan="1"><p>{'version': 'v1', 'name': 'dbs-mysql-5.7-20181002-4220bac.qcow2'}</p><p>MD5SUM: fd17989f93efab518dc18e2af81c7920</p></td></tr><tr><td class="confluenceTd" colspan="1">Postgresql-9.6</td><td class="confluenceTd" colspan="1">006</td><td class="confluenceTd" colspan="1">dbs-postgresql-9.6-20181003-4220bac.qcow2</td><td class="confluenceTd" colspan="1">PostgreSQL 9.6.10</td><td class="confluenceTd" colspan="1"><p>{'version': 'v1', 'name': 'dbs-postgresql-9.6-20181003-4220bac.qcow2'}</p><p>MD5SUM: 333a113a85ebc47d0eb5e5331ad85905</p></td></tr><tr><td class="confluenceTd" colspan="1">Postgresql-10</td><td class="confluenceTd" colspan="1">006</td><td class="confluenceTd" colspan="1">dbs-postgresql-10-20181003-4220bac.qcow2</td><td class="confluenceTd" colspan="1">PostgreSQL 10.5-1</td><td class="confluenceTd" colspan="1"><p>{'version': 'v1', 'name': 'dbs-postgresql-10-20181003-4220bac.qcow2'}</p><p>MD5SUM: ae9ad9930315a67c000ebcce2c22508c</p></td></tr><tr><td class="confluenceTd" colspan="1">MariaDB-10.1</td><td class="confluenceTd" colspan="1">009</td><td class="confluenceTd" colspan="1">dbs-mariadb-10.1-20181002-4220bac.qcow2</td><td class="confluenceTd" colspan="1">MariaDB 10.1.32</td><td class="confluenceTd" colspan="1"><p>{'version': 'v1', 'name': 'dbs-mariadb-10.1-20181002-4220bac.qcow2'}</p><p>MD5SUM: 9130e8745efca9f974f86ed59c9d265f</p></td></tr></tbody></table>
 
 **Database Cluster Information (dbc-manager)**
 
-Engine Version
-
-Revision
-
-image-file
-
-Application Version
-
-Signature and MD5sum (for Dark Site)
-
-Cassandra-3.0
-
-007
-
-dbc-cassandra-3.0-20180925-9cc24e0.qcow2
-
-Cassandra 3.0.17
-
-{'version': '1.0', 'name': 'dbc-cassandra-3.0-20180925-9cc24e0.qcow2'}
-
-MD5SUM: cec2d7d33ab9e091b08ab8ae50ad1736
-
-Cassandra-3.11
-
-005
-
-dbc-cassandra-3.11-20180925-9cc24e0.qcow2
-
-Cassandra 3.11.3
-
-{'version': '1.0', 'name': 'dbc-cassandra-3.11-20180925-9cc24e0.qcow2'}
-
-MD5SUM: f8dc6b7f349ac3318673af2c65f76665
-
-GaleraMariaDB-10.1
-
-005
-
-dbc-mariadb-10.1-20180925-9cc24e0.qcow2
-
-MariaDB 10.1.32
-
-{'version': '1.0', 'name': 'dbc-mariadb-10.1-20180925-9cc24e0.qcow2'}
-
-MD5SUM: b9b48dc8c9ee649d3ca7118dae0307b0
+<table class="wrapped confluenceTable"><colgroup><col style="width: 127.0px;"><col style="width: 83.0px;"><col style="width: 309.0px;"><col style="width: 156.0px;"><col style="width: 463.0px;"></colgroup><tbody><tr><th class="confluenceTh">Engine Version</th><th class="confluenceTh" colspan="1">Revision</th><th class="confluenceTh">image-file</th><th class="confluenceTh" colspan="1">Application Version</th><th class="confluenceTh">Signature and MD5sum (for Dark Site)</th></tr><tr><td class="confluenceTd" colspan="1">Cassandra-3.0</td><td class="confluenceTd" colspan="1">007</td><td class="confluenceTd" colspan="1">dbc-cassandra-3.0-20180925-9cc24e0.qcow2</td><td class="confluenceTd" colspan="1">Cassandra 3.0.17</td><td class="confluenceTd" colspan="1"><p>{'version': '1.0', 'name': 'dbc-cassandra-3.0-20180925-9cc24e0.qcow2'}</p><p>MD5SUM: cec2d7d33ab9e091b08ab8ae50ad1736</p></td></tr><tr><td class="confluenceTd" colspan="1">Cassandra-3.11</td><td class="confluenceTd" colspan="1">005</td><td class="confluenceTd" colspan="1">dbc-cassandra-3.11-20180925-9cc24e0.qcow2</td><td class="confluenceTd" colspan="1">Cassandra 3.11.3</td><td class="confluenceTd" colspan="1"><p>{'version': '1.0', 'name': 'dbc-cassandra-3.11-20180925-9cc24e0.qcow2'}</p><p>MD5SUM: f8dc6b7f349ac3318673af2c65f76665</p></td></tr><tr><td class="confluenceTd" colspan="1">GaleraMariaDB-10.1</td><td class="confluenceTd" colspan="1">005</td><td class="confluenceTd" colspan="1">dbc-mariadb-10.1-20180925-9cc24e0.qcow2</td><td class="confluenceTd" colspan="1">MariaDB 10.1.32</td><td class="confluenceTd" colspan="1"><p>{'version': '1.0', 'name': 'dbc-mariadb-10.1-20180925-9cc24e0.qcow2'}</p><p>MD5SUM: b9b48dc8c9ee649d3ca7118dae0307b0</p></td></tr></tbody></table>
 
 **Kubernetes Information (kubernetes-manager)**
 
-Engine Version
-
-Revision
-
-image-file
-
-Application Version
-
-Signature and MD5sum (for Dark Site)
-
-Kubernetes-1.8.1
-
-003
-
-k8s-k8s-1.8.1-20180926-1eb866b.qcow2
-
-Kubernetes 1.8.1
-
-{'version': 'v1.8.1', 'name': 'k8s-k8s-1.8.1-20180926-1eb866b.qcow2'}
-
-MD5SUM: 7c4e4c80791564c7715de78722a23bde
-
-Kubernetes-1.11
-
-001
-
-k8s-k8s-1.11-20181004-da4c680.qcow2
-
-Kubernetes 1.11
-
-{'version': 'v1.11', 'name': 'k8s-k8s-1.11-20181004-da4c680.qcow2'}
-
-MD5SUM: e201c900d7afa8de5f7ce3b0cccf93c7
+<table class="wrapped confluenceTable"><colgroup><col style="width: 127.0px;"><col style="width: 83.0px;"><col style="width: 309.0px;"><col style="width: 156.0px;"><col style="width: 463.0px;"></colgroup><tbody><tr><th class="confluenceTh">Engine Version</th><th class="confluenceTh" colspan="1">Revision</th><th class="confluenceTh">image-file</th><th class="confluenceTh" colspan="1">Application Version</th><th class="confluenceTh">Signature and MD5sum (for Dark Site)</th></tr><tr><td class="confluenceTd" colspan="1">Kubernetes-1.8.1</td><td class="confluenceTd" colspan="1">003</td><td class="confluenceTd" colspan="1">k8s-k8s-1.8.1-20180926-1eb866b.qcow2</td><td class="confluenceTd" colspan="1">Kubernetes 1.8.1</td><td class="confluenceTd" colspan="1"><p>{'version': 'v1.8.1', 'name': 'k8s-k8s-1.8.1-20180926-1eb866b.qcow2'}</p><p>MD5SUM: 7c4e4c80791564c7715de78722a23bde</p></td></tr><tr><td class="confluenceTd" colspan="1">Kubernetes-1.11</td><td class="confluenceTd" colspan="1">001</td><td class="confluenceTd" colspan="1">k8s-k8s-1.11-20181004-da4c680.qcow2</td><td class="confluenceTd" colspan="1">Kubernetes 1.11</td><td class="confluenceTd" colspan="1"><p>{'version': 'v1.11', 'name': 'k8s-k8s-1.11-20181004-da4c680.qcow2'}</p><p>MD5SUM: e201c900d7afa8de5f7ce3b0cccf93c7</p></td></tr></tbody></table>
 
 **File System Information (nfs-manager)**
 
-Engine Version
-
-Revision
-
-image-file
-
-Application Version
-
-Signature and MD5sum (for Dark Site)
-
-nfs-server-1.0
-
-005
-
-nfs-nfs-1.0-20180730-608d794.qcow2
-
-n/a
-
-{'version': '1.0', 'name': 'nfs-nfs-1.0-20180730-608d794.qcow2'}
-
-MD5SUM: c7920396acb1443248b78847b0534a8e
+<table class="wrapped confluenceTable"><colgroup><col style="width: 127.0px;"><col style="width: 83.0px;"><col style="width: 309.0px;"><col style="width: 156.0px;"><col style="width: 463.0px;"></colgroup><tbody><tr><th class="confluenceTh">Engine Version</th><th class="confluenceTh" colspan="1">Revision</th><th class="confluenceTh">image-file</th><th class="confluenceTh" colspan="1">Application Version</th><th class="confluenceTh">Signature and MD5sum (for Dark Site)</th></tr><tr><td class="confluenceTd" colspan="1">nfs-server-1.0</td><td class="confluenceTd" colspan="1">005</td><td class="confluenceTd" colspan="1">nfs-nfs-1.0-20180730-608d794.qcow2</td><td class="confluenceTd" colspan="1">n/a</td><td class="confluenceTd" colspan="1"><p>{'version': '1.0', 'name': 'nfs-nfs-1.0-20180730-608d794.qcow2'}</p><p>MD5SUM: c7920396acb1443248b78847b0534a8e</p></td></tr></tbody></table>
 
 **Map Reduce Information (mapreduce)**
 
-Engine Version
-
-Revision
-
-image-file
-
-Application Version
-
-Signature and MD5sum (for Dark Site)
-
-Mapreduce-1.2
-
-005
-
-mr-bigtop-1.2-ec70f86-20180508.qcow2
-
-Bigtop 1.2
-
-{'version': '1.0', 'name': 'mr-bigtop-1.2-ec70f86-20180508.qcow2'}
-
-MD5SUM: 56c71749df9a529b7ad66ee8a425cb17
-
+<table class="wrapped confluenceTable"><colgroup><col style="width: 127.0px;"><col style="width: 83.0px;"><col style="width: 309.0px;"><col style="width: 156.0px;"><col style="width: 463.0px;"></colgroup><tbody><tr><th class="confluenceTh">Engine Version</th><th class="confluenceTh" colspan="1">Revision</th><th class="confluenceTh">image-file</th><th class="confluenceTh" colspan="1">Application Version</th><th class="confluenceTh">Signature and MD5sum (for Dark Site)</th></tr><tr><td class="confluenceTd" colspan="1">Mapreduce-1.2</td><td class="confluenceTd" colspan="1">005</td><td class="confluenceTd" colspan="1">mr-bigtop-1.2-ec70f86-20180508.qcow2</td><td class="confluenceTd" colspan="1">Bigtop 1.2</td><td class="confluenceTd" colspan="1"><p>{'version': '1.0', 'name': 'mr-bigtop-1.2-ec70f86-20180508.qcow2'}</p><p>MD5SUM: 56c71749df9a529b7ad66ee8a425cb17</p></td></tr></tbody></table>
 
 **Load Balancing Information (lbaas-manager)**
 
-| Engine Version | Revision | Image-file | Application Version | Signature and MD5sum (for dark site)
-| -- | -- | -- | -- | --|
-| lbaas-engine | n/a | lbaas-haproxy-1.7.8-20180907-4777b52.qcow2 | n/a | {'version': 'v5', 'name': 'lbaas-engine'}  <br> MD5SUM: abdf77cabc62fd4705c88e5a34b45605
-
-
-
+<table class="wrapped confluenceTable"><colgroup><col style="width: 127.0px;"><col style="width: 83.0px;"><col style="width: 309.0px;"><col style="width: 156.0px;"><col style="width: 463.0px;"></colgroup><tbody><tr><th class="confluenceTh">Engine Version</th><th class="confluenceTh" colspan="1">Revision</th><th class="confluenceTh">image-file</th><th class="confluenceTh" colspan="1">Application Version</th><th class="confluenceTh">Signature and MD5sum (for Dark Site)</th></tr><tr><td class="confluenceTd" colspan="1">lbaas-engine</td><td class="confluenceTd" colspan="1">n/a</td><td class="confluenceTd" colspan="1">lbaas-haproxy-1.7.8-20180907-4777b52.qcow2</td><td class="confluenceTd" colspan="1">n/a</td><td class="confluenceTd" colspan="1"><p>{'version': 'v5', 'name': 'lbaas-engine'}</p><p>MD5SUM: abdf77cabc62fd4705c88e5a34b45605</p></td></tr></tbody></table>
 
 **Container Registry Service Information (crs-manager)**
 
-| Engine Version | Revision | Image-file | Application Version | Signature and MD5sum (for dark site)
-| -- | -- | -- | -- | --|
-| Docker-registry-2.6 | 002 | 20180925-9cc24e0.qcow2 | Docker Registry 2.6 | {'version': 'v1', 'name': 'crs-docker-registry-2.6-20180925-9cc24e0.qcow2'} <br> MD5SUM: b7f4d82b60b58ada53abfc9380964a53
+<table class="wrapped confluenceTable"><colgroup><col style="width: 127.0px;"><col style="width: 83.0px;"><col style="width: 309.0px;"><col style="width: 156.0px;"><col style="width: 463.0px;"></colgroup><tbody><tr><th class="confluenceTh">Engine Version</th><th class="confluenceTh" colspan="1">Revision</th><th class="confluenceTh">image-file</th><th class="confluenceTh" colspan="1">Application Version</th><th class="confluenceTh">Signature and MD5sum (for Dark Site)</th></tr><tr><td class="confluenceTd" colspan="1">Docker-registry-2.6</td><td class="confluenceTd" colspan="1">002</td><td class="confluenceTd" colspan="1">20180925-9cc24e0.qcow2</td><td class="confluenceTd" colspan="1">Docker Registry 2.6</td><td class="confluenceTd" colspan="1"><p>{'version': 'v1', 'name': 'crs-docker-registry-2.6-20180925-9cc24e0.qcow2'}</p><p>MD5SUM: b7f4d82b60b58ada53abfc9380964a53</p></td></tr></tbody></table>
 
